Implement project renderization on page load
- This function will also be used to render any project the user adds.

--- a/src/template.html
+++ b/src/template.html
@@ -22,14 +22,14 @@
 
         <!-- MAIN CATEGORIES -->
         <div class="sidebar-links">
-          <li class="active sidebar-link">
+          <li data-project-name="all" class="active sidebar-link">
             <a href="#">
               <span class="icon material-symbols-outlined"> home_storage </span>
               <span>All</span>
             </a>
           </li>
 
-          <li class="sidebar-link">
+          <li data-project-name="pending" class="sidebar-link">
             <a href="#">
               <span class="icon material-symbols-outlined">
                 pending_actions
@@ -38,7 +38,7 @@
             </a>
           </li>
 
-          <li class="sidebar-link">
+          <li data-project-name="completed" class="sidebar-link">
             <a href="#">
               <span class="icon material-symbols-outlined"> check_circle </span>
               <span>Completed</span>
