--- a/src/template.html
+++ b/src/template.html
@@ -20,6 +20,15 @@
         </li>
         <div class="general-separator"></div>
 
+        <!-- ADD NEW TODO BUTTON -->
+        <li>
+          <a href="#" data-target-modal="add-todo">
+            <span class="icon material-symbols-outlined">add_circle</span>
+            <span class="text-white-shadow">ADD NEW TODO</span>
+          </a>
+        </li>
+        <div class="general-separator"></div>
+
         <!-- MAIN CATEGORIES -->
         <div class="sidebar-links">
           <li data-project-name="all" class="active sidebar-link">
@@ -49,7 +58,7 @@
           <!-- PROJECT CATEGORIES -->
           <li class="sidebar-projects sidebar-section">
             <span>Projects</span>
-            <button>
+            <button data-target-modal="add-project">
               <span class="icon material-symbols-outlined">add</span>
             </button>
           </li>
@@ -62,5 +71,103 @@
       <h1>All</h1>
       <ul class="todo-container"></ul>
     </main>
+
+    <!-- Modals -->
+    <div class="modal-container">
+      <dialog id="add-todo-modal">
+        <h2 class="dialog-title">Title</h2>
+        <div class="general-separator"></div>
+        <form method="dialog" id="add-todo-form">
+          <div>
+            <label for="add-todo-title">Title</label>
+            <input
+              type="text"
+              name="title"
+              id="add-todo-title"
+              placeholder="Buy groceries for the week"
+              autocomplete="off"
+              autofocus
+              required
+            />
+          </div>
+
+          <div>
+            <label for="add-todo-description">Description</label>
+            <textarea
+              name="description"
+              id="add-todo-description"
+              placeholder="Go to the nearest shop after making the grocery list.."
+            ></textarea>
+          </div>
+
+          <div class="form-details">
+            <div>
+              <label for="add-todo-due-date">Due</label>
+              <input
+                type="date"
+                name="dueDate"
+                id="add-todo-due-date"
+                required
+              />
+            </div>
+
+            <div>
+              <label for="add-todo-priority">Priority</label>
+              <select name="priority" id="add-todo-priority">
+                <option value="low">Low</option>
+                <option value="medium">Medium</option>
+                <option value="high">High</option>
+              </select>
+            </div>
+
+            <div>
+              <label for="add-todo-project">Project</label>
+              <select name="project" id="add-todo-project">
+                <option value="home" selected>Home</option>
+                <option value="events">Events</option>
+              </select>
+            </div>
+          </div>
+          <div class="form-controls">
+            <div>
+              <button type="submit">Confirm</button>
+            </div>
+            <div>
+              <button type="button" data-action="close-modal">Close</button>
+            </div>
+          </div>
+        </form>
+      </dialog>
+
+      <dialog id="add-project-modal">
+        <h2>New Project</h2>
+
+        <div class="general-separator"></div>
+
+        <form method="dialog" id="add-project-form">
+          <div>
+            <label for="project-title">Title</label>
+            <input
+              type="text"
+              name="project-title"
+              id="project-title"
+              placeholder="Work"
+              autocomplete="off"
+              required
+            />
+          </div>
+
+          <div class="form-controls">
+            <div>
+              <button type="submit">Add</button>
+            </div>
+
+            <div>
+              <button type="button" data-action="close-modal">Close</button>
+            </div>
+          </div>
+        </form>
+      </dialog>
+    </div>
   </body>
 </html>
