--- a/src/template.html
+++ b/src/template.html
@@ -122,7 +122,11 @@
 
             <div>
               <label for="add-todo-project">Project</label>
-              <select name="project" id="add-todo-project">
+              <select
+                name="project"
+                id="add-todo-project"
+                class="todo-projects"
+              >
                 <option value="home" selected>Home</option>
                 <option value="events">Events</option>
               </select>
@@ -149,7 +153,7 @@
             <label for="project-title">Title</label>
             <input
               type="text"
-              name="project-title"
+              name="projectTitle"
               id="project-title"
               placeholder="Work"
               autocomplete="off"
