Implement "remove todo" logic
- Added a warning message to improve the accessibility of the modal.

- Added a default parameter for the "displayTodos" function. When the
user removes a todo, all remaining todos will be displayed.

- Fixed the "remove" button not being highlighted when opening the
"remove todo" modal for the first time. This fix is on the "style.css"
file, line 65.

- Fixed the "removeTodo" method returning -1 for the index. The todoId
that is passed to the method is type String, so we have to convert it
to type Number to get the correct index.

--- a/src/template.html
+++ b/src/template.html
@@ -256,6 +256,7 @@
         <div class="general-separator"></div>
 
         <form method="dialog" id="remove-todo-form">
+          <p>Are you sure you want to remove this todo?</p>
           <div class="form-controls">
             <div>
               <button type="submit">Remove</button>
