Add project options to forms' select elements
- Renamed "updateProjectsInForms" to "updateProjectOptions" for clarity.

- Updated the function to handle multiple forms. The options will now
be rendered in both "add todo" and "edit todo" forms.

- Moved the call of "updateProjectOptions" inside "renderProjects" to
streamline the code and avoid unnecessary exports/imports.

--- a/src/template.html
+++ b/src/template.html
@@ -125,7 +125,7 @@
               <select
                 name="newProject"
                 id="add-todo-project"
-                class="todo-projects"
+                class="todo-project"
               >
                 <option value="home" selected>Home</option>
                 <option value="events">Events</option>
@@ -231,6 +231,7 @@
                 data-edit-todo="project"
                 name="updatedProject"
                 id="edit-todo-project"
+                class="todo-project"
               >
                 <option value="home">Home</option>
                 <option value="events">Events</option>
