Improve layout by using a collapsible sidebar

--- a/src/template.html
+++ b/src/template.html
@@ -10,7 +10,7 @@
     <title>todoapp</title>
   </head>
   <body>
-    <nav class="sidebar">
+    <nav class="sidebar close">
       <ul>
         <li class="sidebar-logo sidebar-section">
           <span>todos</span>
