Update styles and icons to improve responsiveness

--- a/src/template.html
+++ b/src/template.html
@@ -23,7 +23,7 @@
         <!-- ADD NEW TODO BUTTON -->
         <li>
           <a href="#" data-target-modal="add-todo-modal">
-            <span class="icon material-symbols-outlined">add_circle</span>
+            <span class="icon material-symbols-outlined"> add_task </span>
             <span class="text-white-shadow">ADD NEW TODO</span>
           </a>
         </li>
@@ -59,7 +59,7 @@
           <li class="sidebar-projects sidebar-section">
             <span>Projects</span>
             <button data-target-modal="add-project-modal">
-              <span class="icon material-symbols-outlined">add</span>
+              <span class="icon material-symbols-outlined"> add_2 </span>
             </button>
           </li>
           <div class="projects-wrapper"></div>
@@ -75,7 +75,7 @@
     <!-- Modals -->
     <div class="modal-container">
       <dialog id="add-todo-modal">
-        <h2 class="dialog-title">Title</h2>
+        <h2 class="dialog-title">Add Todo</h2>
         <div class="general-separator"></div>
         <form method="dialog" id="add-todo-form">
           <div>
