--- a/src/template.html
+++ b/src/template.html
@@ -131,6 +131,18 @@
                 <option value="events">Events</option>
               </select>
             </div>
+
+            <div>
+              <label for="add-todo-status">Status</label>
+              <select
+                data-add-todo="status"
+                name="newStatus"
+                id="add-todo-status"
+              >
+                <option value="pending" selected>Pending</option>
+                <option value="completed">Completed</option>
+              </select>
+            </div>
           </div>
           <div class="form-controls">
             <div>
@@ -235,6 +247,18 @@
               >
                 <option value="home">Home</option>
                 <option value="events">Events</option>
+              </select>
+            </div>
+
+            <div>
+              <label for="edit-todo-status">Status</label>
+              <select
+                data-edit-todo="status"
+                name="updatedStatus"
+                id="edit-todo-status"
+              >
+                <option value="pending" selected>Pending</option>
+                <option value="completed">Completed</option>
               </select>
             </div>
           </div>
