Fix arrow icon pointing in the wrong direction

--- a/src/template.html
+++ b/src/template.html
@@ -15,7 +15,7 @@
         <li class="sidebar-logo sidebar-section">
           <span>todos</span>
           <button class="collapse-btn">
-            <span class="icon material-symbols-outlined">west</span>
+            <span class="icon material-symbols-outlined">east</span>
           </button>
         </li>
         <div class="general-separator"></div>
